tests/cases/errors/unsafe_capability_violation.ring
// expect-error: E0405
mod restricted requires {} {
    pub fn dangerous() with {unsafe} {
    }
}
